# jade

./: CMakeLists.txt  CMakePresets.json
example/: CMakeLists.txt  example.cpp
include/: Matrix.h  Matrix2.h  Utility.h  Vector2.h  Vector2D.h  Vector3.h
src/: Matrix2.cpp  Vector2.cpp  Vector2D.cpp  Vector3.cpp  main.cpp  util.cpp
test/: CMakeLists.txt  Jade_Matrix_Test.cpp  Jade_Test.cpp  Vector2_test.cpp
tests/: CMakeLists.txt  Jade_Test.cpp
